--- a/Css/index.css
+++ b/Css/index.css
@@ -10,7 +10,7 @@ html {
     box-sizing: inherit;  /*hereda las propiedades de su padre*/
 }
 
-/* Propiedades de la Navbar  y el footer*/
+/* Propiedades de la Navbar*/
 .estilo{
     display: flex;
     list-style-type: none;
@@ -61,11 +61,17 @@ h1 a:hover{
 
 
 
+/* Menu hamburgesa */
+
+
+
+
 /* Tipografia general para todas las paginas */
 
 .estiloPrin{
     font-family: 'Montserrat';
     color: #FFFFFF;
+    height: 79.5vh;
 }
 
 .lista{
@@ -80,12 +86,11 @@ h1 a:hover{
 /* Titulo Principal */
 
 .fondito{
-    height: 100vh;
     width: 80%;
     display: flex;
     flex-direction: column;
     position: relative;
-    top: 10%;
+    top: 10vh;
     left: 15%;
     margin: 0;
     padding: 0;
@@ -93,7 +98,7 @@ h1 a:hover{
 .nombre{
     font-style: normal;
     font-weight: 500;
-    font-size: calc(10vw - 10px);
+    font-size: calc(20rem - 10px);
     margin-bottom: 0.5%;
     line-height: 1;
     width: auto;
@@ -102,7 +107,7 @@ h1 a:hover{
 .apellido{
     font-style: normal;
     font-weight: 800;
-    font-size: calc(17vw - 10px);
+    font-size: calc(35rem - 10px);
     margin-bottom: 1%;
     line-height: 0.6;
     width: auto;
@@ -111,9 +116,9 @@ h1 a:hover{
 .titulo{
     font-style: italic;
     font-weight: 400;
-    font-size: calc(4.8vw - 8px);
+    font-size: calc(9.5rem - 8px);
     left: 15.7%;
-    line-height: 1;
+    line-height: 1.3;
     width: auto;
 }
 
@@ -127,7 +132,7 @@ h1 a:hover{
     background: #0A4D68;
     width: 100%;
     height: 12vh;
-    position: relative;
+    position: fixed;
     bottom: 0;
 }
 
@@ -136,4 +141,116 @@ h1 a:hover{
 }
 
 
-/* Falta agregarle los media para los breackpointsa */
+/* Falta agregarle los media para los breackpoints */
+@media screen and (max-width: 399px) {
+    .nombre{
+        font-size: calc( 5.5rem - 10px);
+    }
+    .apellido{
+        font-size: calc( 9rem - 10px);
+        line-height: 0.8;
+    }
+    .titulo{
+        line-height: 1.5;
+        font-size: calc(3rem - 10px);
+    }
+
+
+}
+
+@media screen and (min-width: 400px) and (max-width: 599px){
+    .nombre{
+        font-size: calc( 6rem - 10px);
+    }
+    .apellido{
+        font-size: calc( 10rem - 10px);
+        line-height: 0.8;
+    }
+    .titulo{
+        line-height: 1.5;
+        font-size: calc(3.3rem - 10px);
+    }
+
+
+}
+
+@media screen and (min-width: 600px) and (max-width: 799px){
+    .nombre{
+        font-size: calc( 8rem - 10px);
+    }
+    .apellido{
+        font-size: calc( 13.5rem - 10px);
+        line-height: 0.8;
+    }
+    .titulo{
+        line-height: 1.5;
+        font-size: calc(4.2rem - 10px);
+    }
+
+
+}
+
+@media screen and (min-width: 800px) and (max-width: 1023px){
+    .nombre{
+        font-size: calc( 10rem - 10px);
+    }
+    .apellido{
+        font-size: calc( 17rem - 10px);
+        line-height: 0.6;
+    }
+    .titulo{
+        line-height: 1.5;
+        font-size: calc(5rem - 10px);
+    }
+} 
+
+@media screen and (min-width: 1024px) and (max-width: 1439px){
+    .nombre{
+        font-size: calc( 12rem - 10px);
+    }
+    .apellido{
+        font-size: calc( 20rem - 10px);
+        line-height: 0.6;
+    }
+    .titulo{
+        line-height: 1.5;
+        font-size: calc(5.8rem - 10px);
+    }
+} 
+
+@media screen and (min-width: 1440px){
+    .nombre{
+        font-size: calc( 10rem - 10px);
+    }
+    .apellido{
+        font-size: calc( 17rem - 10px);
+        line-height: 0.6;
+    }
+    .titulo{
+        line-height: 1.5;
+        font-size: calc(5rem - 10px);
+    }
+} 
+
+
+
+/* Estilos para el menú desplegable en pantallas pequeñas */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #0A4D68;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: #FFFFFF;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
