--- a/Css/sobremi.css
+++ b/Css/sobremi.css
@@ -66,9 +66,10 @@ h1 a:hover{
     align-items: center;
     background: #0A4D68;
     width: 100%;
-    height: 10vh;
+    height: 12vh;
     position: fixed;
     bottom: 0;
+    font-size: calc(4rem - 10px);
 }
 
 .margen{
