--- a/Css/contacto.css
+++ b/Css/contacto.css
@@ -28,31 +28,34 @@ a{
 }
 
 .navbar{
-    min-height: 5vw;
+    min-height: 70px;
     display: flex;
-	margin: 0;
+    justify-content: space-between;
+    align-items: center;
 	padding: 0 24px;
-    justify-content: space-between;
-    align-items: center;
 }
 
-.navMenu{
+.nav-menu{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    gap: 20px;
+    gap: 60px;
 }
 
-.navHome{
+.nav-home{
     font-weight: 600;
     font-size: calc(3rem - 10px);
 }
 
-li a:hover {
+.nav-link{
+    transition: 0.7s ease;
+}
+
+.nav-link:hover {
     background-color: #0cb0b6;
 }
 
-.navItem{
+.nav-item{
     font-size: calc(2.5rem - 10px);
 }
 
@@ -75,19 +78,19 @@ li a:hover {
     .hamburger{
         display: block;
     }
-    .hamburger.active .bar:nth-child(2){
+    .hamburger.active.bar:nth-child(2){
         opacity: 0;
     }
-    .hamburger.active .bar:nth-child(1){
+    .hamburger.active.bar:nth-child(1){
         transform: translateY(8px) rotate(45deg);        
     }
-    .hamburger.active .bar:nth-child(3){
+    .hamburger.active.bar:nth-child(3){
         transform: translateY(-8px) rotate(-45deg);        
     }
-    .navMenu{
+    .nav-menu{
         position: fixed;
         left: -100%;
-        top: 5vw;
+        top: 70px;
         gap: 0;
         flex-direction: column;
         background-color: #0A4D68;
@@ -95,44 +98,13 @@ li a:hover {
         text-align: center;
         transition: 0.3s;
     }
-    .navItem{
+    .nav-item{
         margin: 16px 0;
     }
-    .navMenu.active{
+    .nav-menu.active{
         left: 0;
     }
 }
-/* .estilo li{
-    float: left;
-    margin: 1rem;
-}
-
-li a{
-    display: block;
-	color: #FFFFFF;
-	text-align: center;
-	text-decoration: none;
-}
-
-li a:hover {
-    background-color: #0cb0b6;
-}
-
-.home{
-    font-style: normal;
-    font-weight: 600;
-}
-
-h1 a{
-    display: block;
-	color: #FFFFFF;
-	text-align: center;
-	text-decoration: none;
-}
-
-h1 a:hover{
-    background-color: #0cb0b6;
-} */
 
 .redes{
     display: flex;
