--- a/Css/sobremi.css
+++ b/Css/sobremi.css
@@ -11,52 +11,99 @@ html {
 }
 
 /* Propiedades de la Navbar  y el footer*/
-.estilo{
-    display: flex;
-    list-style-type: none;
-	margin: 0;
-	padding: 0;
-	overflow: hidden;
+header{
     background-color: #0A4D68;
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 300;
-    font-size: 2vw;
-    justify-content: center;
 }
 
-.estilo li{
-    float: left;
-    margin: 1rem;
+li{
+    list-style: none;
 }
 
-li a{
-    display: block;
-	color: #FFFFFF;
-	text-align: center;
-	text-decoration: none;
+a{
+    color: #FFFFFF;
+    text-decoration: none;
 }
 
-li a:hover {
-    background-color: #0cb0b6;
+.navbar{
+    min-height: 70px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+	padding: 0 24px;
 }
 
-.home{
-    font-style: normal;
+.nav-menu{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 60px;
+}
+
+.nav-home{
     font-weight: 600;
+    font-size: calc(3rem - 10px);
 }
 
-
-
-h1 a{
-    display: block;
-	color: #FFFFFF;
-	text-align: center;
-	text-decoration: none;
+.nav-link{
+    transition: 0.7s ease;
 }
 
-h1 a:hover{
+.nav-link:hover {
     background-color: #0cb0b6;
+}
+
+.nav-item{
+    font-size: calc(2.5rem - 10px);
+}
+
+.hamburger{
+    display: none;
+    cursor: pointer;
+}
+
+.bar{
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px auto;
+    -webkit-transition: all 0.3s ease-in-out;
+    transition: all 0.3s ease-in-out;
+    background-color: #FFFFFF;
+}
+
+@media (max-width: 768px) {
+    .hamburger{
+        display: block;
+    }
+    .hamburger.active.bar:nth-child(2){
+        opacity: 0;
+    }
+    .hamburger.active.bar:nth-child(1){
+        transform: translateY(8px) rotate(45deg);        
+    }
+    .hamburger.active.bar:nth-child(3){
+        transform: translateY(-8px) rotate(-45deg);        
+    }
+    .nav-menu{
+        position: fixed;
+        left: -100%;
+        top: 70px;
+        gap: 0;
+        flex-direction: column;
+        background-color: #0A4D68;
+        width: 100%;
+        text-align: center;
+        transition: 0.3s;
+    }
+    .nav-item{
+        margin: 16px 0;
+    }
+    .nav-menu.active{
+        left: 0;
+    }
 }
 
 .redes{
