--- a/Css/experiencias.css
+++ b/Css/experiencias.css
@@ -32,7 +32,7 @@ a{
   display: flex;
   justify-content: space-between;
   align-items: center;
-padding: 0 24px;
+  padding: 0 24px;
 }
 
 .nav-menu{
@@ -78,13 +78,13 @@ padding: 0 24px;
   .hamburger{
       display: block;
   }
-  .hamburger.active.bar:nth-child(2){
+  .hamburger.active .bar:nth-child(2){
       opacity: 0;
   }
-  .hamburger.active.bar:nth-child(1){
+  .hamburger.active .bar:nth-child(1){
       transform: translateY(8px) rotate(45deg);        
   }
-  .hamburger.active.bar:nth-child(3){
+  .hamburger.active .bar:nth-child(3){
       transform: translateY(-8px) rotate(-45deg);        
   }
   .nav-menu{
@@ -97,6 +97,7 @@ padding: 0 24px;
       width: 100%;
       text-align: center;
       transition: 0.3s;
+      z-index: 1;
   }
   .nav-item{
       margin: 16px 0;
