--- a/Css/sobremi.css
+++ b/Css/sobremi.css
@@ -78,13 +78,13 @@ a{
     .hamburger{
         display: block;
     }
-    .hamburger.active.bar:nth-child(2){
+    .hamburger.active .bar:nth-child(2){
         opacity: 0;
     }
-    .hamburger.active.bar:nth-child(1){
+    .hamburger.active .bar:nth-child(1){
         transform: translateY(8px) rotate(45deg);        
     }
-    .hamburger.active.bar:nth-child(3){
+    .hamburger.active .bar:nth-child(3){
         transform: translateY(-8px) rotate(-45deg);        
     }
     .nav-menu{
@@ -141,9 +141,15 @@ a{
     margin-left: 10%;
 }
 
+.titulos{
+    font-weight: 600;
+    font-size: calc(3rem - 10px);
+}
+
 .contenedorItem{
     margin-right: 50px;
     flex-basis: 25%;
+    margin-bottom: 5%;
 }
 .contenedorItem3{
     margin-right: 50px;
@@ -151,6 +157,7 @@ a{
 }
 .parrafo{
     width: 50%;
+    font-size: 1.3rem;
 }
 
 
@@ -158,7 +165,12 @@ a{
 
 @media screen and (max-width: 400px){
     .contenedorItem{
-        flex-basis: 60%;
+        flex-basis: 80%;
+        margin-bottom: 5%;
+    }
+    .contenedorItem3{
+        margin-bottom: 5%;
+        flex-basis: 80%;
     }
     .parrafo{
         width: 100%;
@@ -167,7 +179,12 @@ a{
 
 @media screen and (min-width: 400px) and (max-width: 599px){
     .contenedorItem{
-        flex-basis: 40%;
+        flex-basis: 60%;
+        margin-bottom: 5%;
+    }
+    .contenedorItem3{
+        margin-bottom: 5%;
+        flex-basis: 60%;
     }
     .parrafo{
         width: 100%;
@@ -176,6 +193,12 @@ a{
 
 @media screen and (min-width: 600px) and (max-width: 799px){
     .contenedorItem{
+        flex-basis: 40%;
+        margin-bottom: 5%;
+    }
+    .contenedorItem3{
+        margin-bottom: 5%;
+        margin-right: 7%;
         flex-basis: 40%;
     }
     .parrafo{
